fixing machine history modal stuff

--- a/Dashboard/add_machine_history_modal.html
+++ b/Dashboard/add_machine_history_modal.html
@@ -13,7 +13,7 @@
           <input type="hidden" id="locationIDInput" name="locationIDInput">
           <input type="hidden" id="machineIDInput" name="machineIDInput">
           <div class="form-group">
-              <input type="text" class="form-control form-control-user" id="locationInput" placeholder="Location (Required)" required>
+              <input type="text" class="form-control form-control-user" id="locationInput" placeholder="Location (Required)" autocomplete="off" required>
               <div id="locationSuggestions" class="suggestions-box"></div>
 
           </div>
