changed get machines at location php

--- a/Dashboard/update_machine_type_success.html
+++ b/Dashboard/update_machine_type_success.html
@@ -41,7 +41,7 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Success!</h1>
                                     </div>
-                                    <a href="get_machine_types.html" class="btn btn-primary btn-user btn-block">
+                                    <a href="get_machines_types.html" class="btn btn-primary btn-user btn-block">
                                         Machine Type List
                                     </a>
                                     <a href="index.html" class="btn btn-primary btn-user btn-block">
