--- a/Dashboard/add_account.html
+++ b/Dashboard/add_account.html
@@ -27,7 +27,7 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Create a New Account</h1>
                                     </div>
-                                    <form class="user" action="./php/add_account.php" method="post">
+                                    <form class="user" action="add_account.php" method="post">
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user" id="username" name="username" placeholder="Username" required>
                                         </div>
