--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -280,14 +280,11 @@
 
         // Function to display notification banner
         function showNotificationBanner(status) {
-            console.log("showing notification banner");
             const banner = document.getElementById('notificationBanner');
             if (status === 'success') {
-                console.log("success!;")
-                banner.innerHTML = '<div style="background-color: green; color: white; text-align: center;">Account added successfully!</div>';
+                banner.innerHTML = '<div class="notification-banner" style="background-color: green; color: white; text-align: center;">Account added successfully!</div>';
             } else if (status === 'failure') {
-                console.log("failure!");
-                banner.innerHTML = '<div style="background-color: red; color: white; text-align: center;">Account creation failed.</div>';
+                banner.innerHTML = '<div class="notification-banner" style="background-color: red; color: white; text-align: center;">Account creation failed.</div>';
             }
 
             if (status) {
