--- a/Dashboard/add_account.html
+++ b/Dashboard/add_account.html
@@ -14,6 +14,8 @@
 </head>
 
 <body class="bg-gradient-primary">
+    <div id="sidebarContainer"></div>
+    <script src="sidebar.js"></script>
     <div class="container">
         <!-- Outer Row -->
         <div class="row justify-content-center">
