--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -27,7 +27,7 @@
     <!-- Page Wrapper -->
     <div id="wrapper">
 
-        <<div id="sidebarContainer"></div>
+        <div id="sidebarContainer"></div>
         <script src="sidebar.js"></script>
         <!-- End of Sidebar -->
 
