--- a/Dashboard/login.html
+++ b/Dashboard/login.html
@@ -41,7 +41,7 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
-                                    <form class="user" action="./php/login.php" method="post">
+                                    <form class="user" action="login.php" method="post">
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user"
                                                 name="username" placeholder="Enter Username" required>
