adjusting session variables

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -1,3 +1,11 @@
+<?php
+require_once 'verify_role.php';
+
+// Use the checkAccess function as needed for this particular page
+// checkAccess('admin'); // For admin access
+// checkAccess('employee', 'Vancouver'); // For employee access in Vancouver
+
+?>
 <!DOCTYPE html>
 <html lang="en">
 
