--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -1,10 +1,24 @@
 <?php
-require_once 'verify_role.php';
+session_start();
 
-// Use the checkAccess function as needed for this particular page
-// checkAccess('admin'); // For admin access
-// checkAccess('employee', 'Vancouver'); // For employee access in Vancouver
+// Function to check access
+function checkAccess($requiredRole, $requiredTerritory = null) {
+    if (!isset($_SESSION['loggedin']) || $_SESSION['loggedin'] !== true) {
+        header("Location: login.php");
+        exit;
+    }
+    if ($_SESSION['role'] !== $requiredRole || ($requiredTerritory !== null && $_SESSION['territory'] !== $requiredTerritory)) {
+        header("Location: no_access.php");
+        exit;
+    }
+}
 
+// Example usage
+// For a page that requires admin access
+checkAccess('admin');
+
+// For a page that requires employee access in the Vancouver territory
+//checkAccess('employee', 'Vancouver');
 ?>
 <!DOCTYPE html>
 <html lang="en">
