--- a/Dashboard/update_location_success.html
+++ b/Dashboard/update_location_success.html
@@ -50,7 +50,7 @@
                                     <a href="Calgary_Locations.html" class="btn btn-primary btn-user btn-block">
                                         Calgary
                                     </a>
-                                    <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                    <a href="index.php" class="btn btn-primary btn-user btn-block">
                                         Dashboard
                                     </a>
                                 </div>
