--- a/Dashboard/add_location_success.html
+++ b/Dashboard/add_location_success.html
@@ -44,7 +44,7 @@
                                     <a href="add_location.html" class="btn btn-primary btn-user btn-block">
                                         Add Another
                                     </a>
-                                    <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                    <a href="index.php" class="btn btn-primary btn-user btn-block">
                                         Dashboard
                                     </a>
                                 </div>
