--- a/Dashboard/update_machine_type_success.html
+++ b/Dashboard/update_machine_type_success.html
@@ -44,7 +44,7 @@
                                     <a href="get_machines_types.html" class="btn btn-primary btn-user btn-block">
                                         Machine Type List
                                     </a>
-                                    <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                    <a href="index.php" class="btn btn-primary btn-user btn-block">
                                         Dashboard
                                     </a>
                                 </div>
